--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -417,7 +417,7 @@
    "metadata": {},
    "source": [
     "## Generating Number Sequences: range()\n",
-    "Python offers a built-in function `range` to generate a stream of numbers.  We use `range()` in a similarly to how we used slices:   range(_start_,_stop_,_step).\n",
+    "Python offers a built-in function `range` to generate a stream of numbers.  We use `range()` in a similarly to how we used slices:   range(_start_,_stop_,_step_).\n",
     "\n",
     "Only _stop_ is required.  If _start_ is omitted, the range starts at 0.  The range ends just before the value of stop.  Step has a default value of 1, but we can use any nonzero integer."
    ]
@@ -762,10 +762,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "approxiamate_median = sorted(results)[len(results)//2]  \n",
-    "print(approxiamate_median)\n",
-    "# Note: the median is not computed correctly, but close enough.\n",
-    "# if there's an even number of entries, it should be the average of the two center values"
+    "returns_sorted= sorted(results)\n",
+    "\n",
+    "median = returns_sorted[len(returns_sorted)//2] if len(returns_sorted)%2 == 1 else (returns_sorted[len(returns_sorted)//2] + returns_sorted[1 +len(returns_sorted)//2])/2\n",
+    "print(median)"
    ]
   },
   {
@@ -785,6 +785,9 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(20,10)})\n",
+    "sns.set_style('white')\n",
     "axes = sns.histplot(results,bins=50)\n",
     "axes.set_title(\"Systematic Investment Plan Distribution\")\n",
     "axes.ticklabel_format(style='plain', axis='x',useOffset=False)\n",
@@ -803,7 +806,7 @@
     "axes.ticklabel_format(style='plain', axis='x',useOffset=False)\n",
     "axes.set(xlabel='Future value', ylabel='Count')\n",
     "axes.axvline(mean)        # draw a vertical bar for the mean\n",
-    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for our \"median\"\n",
+    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for the median, dashed\n",
     "axes.set_xlim(0, 500000)  # Distribution is long-tailed,  lets chop off those rare values"
    ]
   },
@@ -815,11 +818,11 @@
    "outputs": [],
    "source": [
     "axes = sns.ecdfplot(results)\n",
-    "axes.set_title(\" cumulative distribution function SIP FV\")\n",
+    "axes.set_title(\"Cumulative Distribution Function: Future Value of a Systematic Investment Plane\")\n",
     "axes.ticklabel_format(style='plain', axis='x',useOffset=False)\n",
     "axes.set(xlabel='Future value')\n",
     "axes.axvline(mean)        # draw a vertical bar for the mean\n",
-    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for our \"median\"\n",
+    "axes.axvline(approxiamate_median,linestyle='--')  # vertical bar for our median, dashed line\n",
     "axes.set_xlim(0, 200000)  # limit to focus on the lower returns"
    ]
   },
